// <auto-generated />
using CairoTransportation.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace CairoTransportation.Migrations
{
    [DbContext(typeof(TransportationDbContext))]
    [Migration("20260425110733_capacity_per_unit")]
    partial class capacity_per_unit
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "9.0.0");

            modelBuilder.Entity("CairoTransportation.Models.Location", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("id");

                    b.Property<string>("Category")
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("category");

                    b.Property<bool>("IsCritical")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasDefaultValue(false)
                        .HasColumnName("is_critical");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("name");

                    b.Property<int?>("Population")
                        .HasColumnType("INTEGER")
                        .HasColumnName("population");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("varchar(20)")
                        .HasColumnName("type");

                    b.Property<double>("X")
                        .HasColumnType("REAL")
                        .HasColumnName("x");

                    b.Property<double>("Y")
                        .HasColumnType("REAL")
                        .HasColumnName("y");

                    b.HasKey("Id");

                    b.ToTable("locations", (string)null);
                });

            modelBuilder.Entity("CairoTransportation.Models.Road", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasColumnName("id");

                    b.Property<int>("Capacity")
                        .HasColumnType("INTEGER")
                        .HasColumnName("capacity");

                    b.Property<int?>("Condition")
                        .HasColumnType("INTEGER")
                        .HasColumnName("condition");

                    b.Property<double?>("ConstructionCost")
                        .HasColumnType("REAL")
                        .HasColumnName("construction_cost");

                    b.Property<double>("Distance")
                        .HasColumnType("REAL")
                        .HasColumnName("distance");

                    b.Property<string>("FromLocationId")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("from_location_id");

                    b.Property<bool>("IsExisting")
                        .HasColumnType("INTEGER")
                        .HasColumnName("is_existing");

                    b.Property<bool>("IsTwoWay")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasDefaultValue(true)
                        .HasColumnName("is_two_way");

                    b.Property<string>("ToLocationId")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("to_location_id");

                    b.HasKey("Id");

                    b.HasIndex("FromLocationId")
                        .HasDatabaseName("idx_roads_from");

                    b.HasIndex("ToLocationId")
                        .HasDatabaseName("idx_roads_to");

                    b.ToTable("roads", null, t =>
                        {
                            t.HasCheckConstraint("chk_capacity", "capacity > 0");

                            t.HasCheckConstraint("chk_distance", "distance > 0");
                        });
                });

            modelBuilder.Entity("CairoTransportation.Models.RoadMaintenance", b =>
                {
                    b.Property<long>("RoadId")
                        .HasColumnType("INTEGER")
                        .HasColumnName("road_id");

                    b.Property<double?>("EstimatedCost")
                        .HasColumnType("REAL")
                        .HasColumnName("estimated_cost");

                    b.Property<int?>("Priority")
                        .HasColumnType("INTEGER")
                        .HasColumnName("priority");

                    b.HasKey("RoadId");

                    b.ToTable("road_maintenance", (string)null);
                });

            modelBuilder.Entity("CairoTransportation.Models.RouteStop", b =>
                {
                    b.Property<string>("RouteId")
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("route_id");

                    b.Property<string>("LocationId")
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("location_id");

                    b.Property<int>("StopOrder")
                        .HasColumnType("INTEGER")
                        .HasColumnName("stop_order");

                    b.HasKey("RouteId", "LocationId");

                    b.HasIndex("LocationId");

                    b.HasIndex("RouteId", "StopOrder")
                        .HasDatabaseName("idx_route_stops_order");

                    b.ToTable("route_stops", (string)null);
                });

            modelBuilder.Entity("CairoTransportation.Models.TrafficFlow", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasColumnName("id");

                    b.Property<int>("Flow")
                        .HasColumnType("INTEGER")
                        .HasColumnName("flow");

                    b.Property<string>("Period")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("varchar(20)")
                        .HasColumnName("period");

                    b.Property<long>("RoadId")
                        .HasColumnType("INTEGER")
                        .HasColumnName("road_id");

                    b.HasKey("Id");

                    b.HasIndex("Period")
                        .HasDatabaseName("idx_traffic_period");

                    b.HasIndex("RoadId")
                        .HasDatabaseName("idx_traffic_road");

                    b.HasIndex("RoadId", "Period")
                        .IsUnique()
                        .HasDatabaseName("uq_traffic_road_period");

                    b.ToTable("traffic_flow", null, t =>
                        {
                            t.HasCheckConstraint("chk_flow", "flow >= 0");
                        });
                });

            modelBuilder.Entity("CairoTransportation.Models.TrafficPeriodMultiplier", b =>
                {
                    b.Property<string>("Period")
                        .HasMaxLength(20)
                        .HasColumnType("varchar(20)")
                        .HasColumnName("period");

                    b.Property<double>("Multiplier")
                        .HasColumnType("REAL")
                        .HasColumnName("multiplier");

                    b.HasKey("Period");

                    b.ToTable("traffic_period_multipliers", null, t =>
                        {
                            t.HasCheckConstraint("chk_multiplier_positive", "multiplier > 0");
                        });
                });

            modelBuilder.Entity("CairoTransportation.Models.TransportDemand", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasColumnName("id");

                    b.Property<int>("DailyPassengers")
                        .HasColumnType("INTEGER")
                        .HasColumnName("daily_passengers");

                    b.Property<string>("FromLocationId")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("from_location_id");

                    b.Property<string>("ToLocationId")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("to_location_id");

                    b.HasKey("Id");

                    b.HasIndex("FromLocationId")
                        .HasDatabaseName("idx_demand_from");

                    b.HasIndex("ToLocationId")
                        .HasDatabaseName("idx_demand_to");

                    b.ToTable("transport_demand", (string)null);
                });

            modelBuilder.Entity("CairoTransportation.Models.TransportRoute", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(10)
                        .HasColumnType("varchar(10)")
                        .HasColumnName("id");

                    b.Property<int>("CapacityPerUnit")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER")
                        .HasDefaultValue(50)
                        .HasColumnName("capacity_per_unit");

                    b.Property<int?>("DailyPassengers")
                        .HasColumnType("INTEGER")
                        .HasColumnName("daily_passengers");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("varchar(20)")
                        .HasColumnName("type");

                    b.Property<int?>("VehiclesAssigned")
                        .HasColumnType("INTEGER")
                        .HasColumnName("vehicles_assigned");

                    b.HasKey("Id");

                    b.ToTable("transport_routes", (string)null);
                });

            modelBuilder.Entity("CairoTransportation.Models.Road", b =>
                {
                    b.HasOne("CairoTransportation.Models.Location", "FromLocation")
                        .WithMany("OutgoingRoads")
                        .HasForeignKey("FromLocationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_roads_from");

                    b.HasOne("CairoTransportation.Models.Location", "ToLocation")
                        .WithMany("IncomingRoads")
                        .HasForeignKey("ToLocationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_roads_to");

                    b.Navigation("FromLocation");

                    b.Navigation("ToLocation");
                });

            modelBuilder.Entity("CairoTransportation.Models.RoadMaintenance", b =>
                {
                    b.HasOne("CairoTransportation.Models.Road", "Road")
                        .WithOne("Maintenance")
                        .HasForeignKey("CairoTransportation.Models.RoadMaintenance", "RoadId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Road");
                });

            modelBuilder.Entity("CairoTransportation.Models.RouteStop", b =>
                {
                    b.HasOne("CairoTransportation.Models.Location", "Location")
                        .WithMany("RouteStops")
                        .HasForeignKey("LocationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_route_stops_location");

                    b.HasOne("CairoTransportation.Models.TransportRoute", "Route")
                        .WithMany("RouteStops")
                        .HasForeignKey("RouteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_route_stops_route");

                    b.Navigation("Location");

                    b.Navigation("Route");
                });

            modelBuilder.Entity("CairoTransportation.Models.TrafficFlow", b =>
                {
                    b.HasOne("CairoTransportation.Models.TrafficPeriodMultiplier", "PeriodMultiplier")
                        .WithMany("TrafficFlows")
                        .HasForeignKey("Period")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_traffic_period_multiplier");

                    b.HasOne("CairoTransportation.Models.Road", "Road")
                        .WithMany("TrafficFlows")
                        .HasForeignKey("RoadId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_traffic_road");

                    b.Navigation("PeriodMultiplier");

                    b.Navigation("Road");
                });

            modelBuilder.Entity("CairoTransportation.Models.TransportDemand", b =>
                {
                    b.HasOne("CairoTransportation.Models.Location", "FromLocation")
                        .WithMany("OriginDemands")
                        .HasForeignKey("FromLocationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_demand_from");

                    b.HasOne("CairoTransportation.Models.Location", "ToLocation")
                        .WithMany("DestinationDemands")
                        .HasForeignKey("ToLocationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_demand_to");

                    b.Navigation("FromLocation");

                    b.Navigation("ToLocation");
                });

            modelBuilder.Entity("CairoTransportation.Models.Location", b =>
                {
                    b.Navigation("DestinationDemands");

                    b.Navigation("IncomingRoads");

                    b.Navigation("OriginDemands");

                    b.Navigation("OutgoingRoads");

                    b.Navigation("RouteStops");
                });

            modelBuilder.Entity("CairoTransportation.Models.Road", b =>
                {
                    b.Navigation("Maintenance");

                    b.Navigation("TrafficFlows");
                });

            modelBuilder.Entity("CairoTransportation.Models.TrafficPeriodMultiplier", b =>
                {
                    b.Navigation("TrafficFlows");
                });

            modelBuilder.Entity("CairoTransportation.Models.TransportRoute", b =>
                {
                    b.Navigation("RouteStops");
                });
#pragma warning restore 612, 618
        }
    }
}
